--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -69,6 +69,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+    <Content Include="mickey_mouse.jpg" />
+    <Content Include="mickey_mouse_request.jpg" />
+    <Content Include="ramipril.jpg" />
+    <Content Include="reorder.jpg" />
+    <Content Include="robert_pryde.jpg" />
+    <Content Include="robert_pryde_request.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets')" />
