Refactored code and improved visual feedback of test images

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -62,19 +62,191 @@
     <Compile Include="QueryConstructor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Resources\tessdata\afr.traineddata" />
+    <None Include="Resources\tessdata\amh.traineddata" />
+    <None Include="Resources\tessdata\ara.traineddata" />
+    <None Include="Resources\tessdata\asm.traineddata" />
+    <None Include="Resources\tessdata\aze.traineddata" />
+    <None Include="Resources\tessdata\aze_cyrl.traineddata" />
+    <None Include="Resources\tessdata\bel.traineddata" />
+    <None Include="Resources\tessdata\ben.traineddata" />
+    <None Include="Resources\tessdata\bod.traineddata" />
+    <None Include="Resources\tessdata\bos.traineddata" />
+    <None Include="Resources\tessdata\bre.traineddata" />
+    <None Include="Resources\tessdata\bul.traineddata" />
+    <None Include="Resources\tessdata\cat.traineddata" />
+    <None Include="Resources\tessdata\ceb.traineddata" />
+    <None Include="Resources\tessdata\ces.traineddata" />
+    <None Include="Resources\tessdata\chi_sim.traineddata" />
+    <None Include="Resources\tessdata\chi_sim_vert.traineddata" />
+    <None Include="Resources\tessdata\chi_tra.traineddata" />
+    <None Include="Resources\tessdata\chi_tra_vert.traineddata" />
+    <None Include="Resources\tessdata\chr.traineddata" />
+    <None Include="Resources\tessdata\configs" />
+    <None Include="Resources\tessdata\cos.traineddata" />
+    <None Include="Resources\tessdata\cym.traineddata" />
+    <None Include="Resources\tessdata\dan.traineddata" />
+    <None Include="Resources\tessdata\dan_frak.traineddata" />
+    <None Include="Resources\tessdata\deu.traineddata" />
+    <None Include="Resources\tessdata\deu_frak.traineddata" />
+    <None Include="Resources\tessdata\div.traineddata" />
+    <None Include="Resources\tessdata\dzo.traineddata" />
+    <None Include="Resources\tessdata\ell.traineddata" />
+    <None Include="Resources\tessdata\eng.traineddata" />
+    <None Include="Resources\tessdata\enm.traineddata" />
+    <None Include="Resources\tessdata\epo.traineddata" />
+    <None Include="Resources\tessdata\equ.traineddata" />
+    <None Include="Resources\tessdata\est.traineddata" />
+    <None Include="Resources\tessdata\eus.traineddata" />
+    <None Include="Resources\tessdata\fao.traineddata" />
+    <None Include="Resources\tessdata\fas.traineddata" />
+    <None Include="Resources\tessdata\fil.traineddata" />
+    <None Include="Resources\tessdata\fin.traineddata" />
+    <None Include="Resources\tessdata\fra.traineddata" />
+    <None Include="Resources\tessdata\frk.traineddata" />
+    <None Include="Resources\tessdata\frm.traineddata" />
+    <None Include="Resources\tessdata\fry.traineddata" />
+    <None Include="Resources\tessdata\gla.traineddata" />
+    <None Include="Resources\tessdata\gle.traineddata" />
+    <None Include="Resources\tessdata\glg.traineddata" />
+    <None Include="Resources\tessdata\grc.traineddata" />
+    <None Include="Resources\tessdata\guj.traineddata" />
+    <None Include="Resources\tessdata\hat.traineddata" />
+    <None Include="Resources\tessdata\heb.traineddata" />
+    <None Include="Resources\tessdata\hin.traineddata" />
+    <None Include="Resources\tessdata\hrv.traineddata" />
+    <None Include="Resources\tessdata\hun.traineddata" />
+    <None Include="Resources\tessdata\hye.traineddata" />
+    <None Include="Resources\tessdata\iku.traineddata" />
+    <None Include="Resources\tessdata\ind.traineddata" />
+    <None Include="Resources\tessdata\isl.traineddata" />
+    <None Include="Resources\tessdata\ita.traineddata" />
+    <None Include="Resources\tessdata\ita_old.traineddata" />
+    <None Include="Resources\tessdata\jav.traineddata" />
+    <None Include="Resources\tessdata\jpn.traineddata" />
+    <None Include="Resources\tessdata\jpn_vert.traineddata" />
+    <None Include="Resources\tessdata\kan.traineddata" />
+    <None Include="Resources\tessdata\kat.traineddata" />
+    <None Include="Resources\tessdata\kat_old.traineddata" />
+    <None Include="Resources\tessdata\kaz.traineddata" />
+    <None Include="Resources\tessdata\khm.traineddata" />
+    <None Include="Resources\tessdata\kir.traineddata" />
+    <None Include="Resources\tessdata\kmr.traineddata" />
+    <None Include="Resources\tessdata\kor.traineddata" />
+    <None Include="Resources\tessdata\kor_vert.traineddata" />
+    <None Include="Resources\tessdata\lao.traineddata" />
+    <None Include="Resources\tessdata\lat.traineddata" />
+    <None Include="Resources\tessdata\lav.traineddata" />
+    <None Include="Resources\tessdata\LICENSE" />
+    <None Include="Resources\tessdata\lit.traineddata" />
+    <None Include="Resources\tessdata\ltz.traineddata" />
+    <None Include="Resources\tessdata\mal.traineddata" />
+    <None Include="Resources\tessdata\mar.traineddata" />
+    <None Include="Resources\tessdata\mkd.traineddata" />
+    <None Include="Resources\tessdata\mlt.traineddata" />
+    <None Include="Resources\tessdata\mon.traineddata" />
+    <None Include="Resources\tessdata\mri.traineddata" />
+    <None Include="Resources\tessdata\msa.traineddata" />
+    <None Include="Resources\tessdata\mya.traineddata" />
+    <None Include="Resources\tessdata\nep.traineddata" />
+    <None Include="Resources\tessdata\nld.traineddata" />
+    <None Include="Resources\tessdata\nor.traineddata" />
+    <None Include="Resources\tessdata\oci.traineddata" />
+    <None Include="Resources\tessdata\ori.traineddata" />
+    <None Include="Resources\tessdata\osd.traineddata" />
+    <None Include="Resources\tessdata\pan.traineddata" />
+    <None Include="Resources\tessdata\pdf.ttf" />
+    <None Include="Resources\tessdata\pol.traineddata" />
+    <None Include="Resources\tessdata\por.traineddata" />
+    <None Include="Resources\tessdata\pus.traineddata" />
+    <None Include="Resources\tessdata\que.traineddata" />
+    <None Include="Resources\tessdata\README.md" />
+    <None Include="Resources\tessdata\ron.traineddata" />
+    <None Include="Resources\tessdata\rus.traineddata" />
+    <None Include="Resources\tessdata\san.traineddata" />
+    <None Include="Resources\tessdata\script\Arabic.traineddata" />
+    <None Include="Resources\tessdata\script\Armenian.traineddata" />
+    <None Include="Resources\tessdata\script\Bengali.traineddata" />
+    <None Include="Resources\tessdata\script\Canadian_Aboriginal.traineddata" />
+    <None Include="Resources\tessdata\script\Cherokee.traineddata" />
+    <None Include="Resources\tessdata\script\Cyrillic.traineddata" />
+    <None Include="Resources\tessdata\script\Devanagari.traineddata" />
+    <None Include="Resources\tessdata\script\Ethiopic.traineddata" />
+    <None Include="Resources\tessdata\script\Fraktur.traineddata" />
+    <None Include="Resources\tessdata\script\Georgian.traineddata" />
+    <None Include="Resources\tessdata\script\Greek.traineddata" />
+    <None Include="Resources\tessdata\script\Gujarati.traineddata" />
+    <None Include="Resources\tessdata\script\Gurmukhi.traineddata" />
+    <None Include="Resources\tessdata\script\Hangul.traineddata" />
+    <None Include="Resources\tessdata\script\Hangul_vert.traineddata" />
+    <None Include="Resources\tessdata\script\HanS.traineddata" />
+    <None Include="Resources\tessdata\script\HanS_vert.traineddata" />
+    <None Include="Resources\tessdata\script\HanT.traineddata" />
+    <None Include="Resources\tessdata\script\HanT_vert.traineddata" />
+    <None Include="Resources\tessdata\script\Hebrew.traineddata" />
+    <None Include="Resources\tessdata\script\Japanese.traineddata" />
+    <None Include="Resources\tessdata\script\Japanese_vert.traineddata" />
+    <None Include="Resources\tessdata\script\Kannada.traineddata" />
+    <None Include="Resources\tessdata\script\Khmer.traineddata" />
+    <None Include="Resources\tessdata\script\Lao.traineddata" />
+    <None Include="Resources\tessdata\script\Latin.traineddata" />
+    <None Include="Resources\tessdata\script\Malayalam.traineddata" />
+    <None Include="Resources\tessdata\script\Myanmar.traineddata" />
+    <None Include="Resources\tessdata\script\Oriya.traineddata" />
+    <None Include="Resources\tessdata\script\Sinhala.traineddata" />
+    <None Include="Resources\tessdata\script\Syriac.traineddata" />
+    <None Include="Resources\tessdata\script\Tamil.traineddata" />
+    <None Include="Resources\tessdata\script\Telugu.traineddata" />
+    <None Include="Resources\tessdata\script\Thaana.traineddata" />
+    <None Include="Resources\tessdata\script\Thai.traineddata" />
+    <None Include="Resources\tessdata\script\Tibetan.traineddata" />
+    <None Include="Resources\tessdata\script\Vietnamese.traineddata" />
+    <None Include="Resources\tessdata\sin.traineddata" />
+    <None Include="Resources\tessdata\slk.traineddata" />
+    <None Include="Resources\tessdata\slk_frak.traineddata" />
+    <None Include="Resources\tessdata\slv.traineddata" />
+    <None Include="Resources\tessdata\snd.traineddata" />
+    <None Include="Resources\tessdata\spa.traineddata" />
+    <None Include="Resources\tessdata\spa_old.traineddata" />
+    <None Include="Resources\tessdata\sqi.traineddata" />
+    <None Include="Resources\tessdata\srp.traineddata" />
+    <None Include="Resources\tessdata\srp_latn.traineddata" />
+    <None Include="Resources\tessdata\sun.traineddata" />
+    <None Include="Resources\tessdata\swa.traineddata" />
+    <None Include="Resources\tessdata\swe.traineddata" />
+    <None Include="Resources\tessdata\syr.traineddata" />
+    <None Include="Resources\tessdata\tam.traineddata" />
+    <None Include="Resources\tessdata\tat.traineddata" />
+    <None Include="Resources\tessdata\tel.traineddata" />
+    <None Include="Resources\tessdata\tgk.traineddata" />
+    <None Include="Resources\tessdata\tgl.traineddata" />
+    <None Include="Resources\tessdata\tha.traineddata" />
+    <None Include="Resources\tessdata\tir.traineddata" />
+    <None Include="Resources\tessdata\ton.traineddata" />
+    <None Include="Resources\tessdata\tur.traineddata" />
+    <None Include="Resources\tessdata\uig.traineddata" />
+    <None Include="Resources\tessdata\ukr.traineddata" />
+    <None Include="Resources\tessdata\urd.traineddata" />
+    <None Include="Resources\tessdata\uzb.traineddata" />
+    <None Include="Resources\tessdata\uzb_cyrl.traineddata" />
+    <None Include="Resources\tessdata\vie.traineddata" />
+    <None Include="Resources\tessdata\yid.traineddata" />
+    <None Include="Resources\tessdata\yor.traineddata" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
-    <Content Include="mickey_mouse.jpg" />
-    <Content Include="mickey_mouse_request.jpg" />
-    <Content Include="ramipril.jpg" />
-    <Content Include="reorder.jpg" />
-    <Content Include="robert_pryde.jpg" />
-    <Content Include="robert_pryde_request.jpg" />
+    <Content Include="Resources\tessdata\.gitmodules" />
+    <Content Include="Resources\Test images\mickey_mouse.jpg" />
+    <Content Include="Resources\Test images\mickey_mouse_request.jpg" />
+    <Content Include="Resources\Test images\ramipril.jpg" />
+    <Content Include="Resources\Test images\reorder.jpg" />
+    <Content Include="Resources\Test images\robert_pryde.jpg" />
+    <Content Include="Resources\Test images\robert_pryde_request.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets')" />
