--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -75,6 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\GUI\MultiFormContext.cs" />
+    <Compile Include="src\GUI\NewETPBatch.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\GUI\NewETPDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
