--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -56,6 +56,9 @@
     <Reference Include="Emgu.CV.World, Version=4.1.1.3497, Culture=neutral, PublicKeyToken=7281126722ab4438, processorArchitecture=MSIL">
       <HintPath>..\packages\EMGU.CV.4.1.1.3497\lib\net35\Emgu.CV.World.dll</HintPath>
     </Reference>
+    <Reference Include="ImapX, Version=2.0.0.18, Culture=neutral, PublicKeyToken=5992873d65130d1f, processorArchitecture=MSIL">
+      <HintPath>..\packages\ImapX.2.0.0.18\lib\net46\ImapX.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -74,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Email\NHSClient.cs" />
     <Compile Include="src\GUI\MultiFormContext.cs" />
     <Compile Include="src\GUI\NewETPBatch.cs">
       <SubType>Form</SubType>
@@ -81,27 +85,25 @@
     <Compile Include="src\GUI\NewETPDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="src\OCRResult.cs" />
-    <Compile Include="src\OCRResultEventArgs.cs" />
-    <Compile Include="src\Patient.cs" />
-    <Compile Include="src\OCR.cs" />
+    <Compile Include="src\CV\OCRResult.cs" />
+    <Compile Include="src\CV\OCRResultEventArgs.cs" />
+    <Compile Include="src\Defunct\Patient.cs" />
+    <Compile Include="src\CV\OCR.cs" />
     <Compile Include="LicensePlateDetector.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="src\QueryConstructor.cs" />
+    <Compile Include="src\SQL\QueryConstructor.cs" />
     <Compile Include="src\GUI\ScreenDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="src\GUI\ScreenDrawingManager.cs" />
-    <Compile Include="src\ScreenProcessor.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="src\SQLQueryer.cs" />
-    <Compile Include="src\StockQueryer.cs" />
-    <Compile Include="src\QueryConstructorOld.cs" />
+    <Compile Include="src\CV\ScreenProcessor.cs" />
+    <Compile Include="src\SQL\SQLQueryer.cs" />
+    <Compile Include="src\SQL\StockQueryer.cs" />
+    <Compile Include="src\Defunct\QueryConstructorOld.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\ResourceManager.cs" />
@@ -309,6 +311,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets" Condition="Exists('..\packages\EMGU.CV.4.1.1.3497\build\EMGU.CV.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
