--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -115,6 +115,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="src\GUI\SelectedProductDrawing.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\SQL\QueryConstructor.cs" />
     <Compile Include="src\GUI\ScreenDrawing.cs">
       <SubType>Form</SubType>
