Testing to be done on basic hard-coded function to display quantity on order pad when viewing pipcode. Currently failing as first time OCRImage runs it's the price, then all subsequent ones are black squares. Problem with image?

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -118,6 +118,7 @@
     <Compile Include="src\GUI\SelectedProductDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="src\Product.cs" />
     <Compile Include="src\SQL\QueryConstructor.cs" />
     <Compile Include="src\GUI\ScreenDrawing.cs">
       <SubType>Form</SubType>
