Made coloured circle that is green when stock is on orderpad, red if not. Next step is populating more data for product's fields and make circle more helpful with tooltip

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -313,6 +313,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
+    <Content Include="Resources\Green_circle.png" />
+    <Content Include="Resources\Red_circle.png" />
     <Content Include="Resources\tessdata\.gitmodules" />
     <Content Include="Resources\Test images\mickey_mouse.jpg" />
     <Content Include="Resources\Test images\Mickey_Mouse_PMR.bmp" />
