Moving towards having a cache of lookups and populating a product object properly. Hook up new PRODUCTINFO query

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -121,6 +121,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="src\Product.cs" />
+    <Compile Include="src\SQL\ProductLookup.cs" />
     <Compile Include="src\SQL\QueryConstructor.cs" />
     <Compile Include="src\GUI\ScreenDrawing.cs">
       <SubType>Form</SubType>
