Making global hotkey - should just need to finish method in context class to hide/show all forms and pause processing

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <Compile Include="src\CV\OCRResultListEventArgs.cs" />
     <Compile Include="src\Email\NHSClient.cs" />
+    <Compile Include="src\GUI\HotKey.cs" />
     <Compile Include="src\GUI\MultiFormContext.cs" />
     <Compile Include="src\GUI\NewETPBatch.cs">
       <SubType>Form</SubType>
