--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EFCA1782-F385-44B3-A893-B67D9565BD01}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>PharmApp</RootNamespace>
     <AssemblyName>PharmApp</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -117,6 +117,8 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="src\GUI\PharmHotKey.cs" />
+    <Compile Include="src\GUI\PharmTrayIcon.cs" />
     <Compile Include="src\GUI\SelectedProductManager.cs" />
     <Compile Include="src\GUI\SelectedProductDrawing.cs">
       <SubType>Form</SubType>
@@ -140,6 +142,7 @@
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\ResourceManager.cs" />
+    <Compile Include="src\Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -324,7 +327,10 @@
     <Content Include="License-LGPL.txt" />
     <Content Include="Resources\Blue_circle.png" />
     <Content Include="Resources\Green_circle.png" />
+    <Content Include="Resources\Green_circle_ast.png" />
+    <Content Include="Resources\Link_icon.ico" />
     <Content Include="Resources\Red_circle.png" />
+    <Content Include="Resources\Red_circle_ast.png" />
     <Content Include="Resources\tessdata\.gitmodules" />
     <Content Include="Resources\Test images\mickey_mouse.jpg" />
     <Content Include="Resources\Test images\Mickey_Mouse_PMR.bmp" />
