--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EFCA1782-F385-44B3-A893-B67D9565BD01}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>PharmApp</RootNamespace>
     <AssemblyName>PharmApp</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
