Hooked up most orderpad functions. Need to implement query in Update method of OrderPad, and make a new Drawing class for comments popup

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -125,8 +125,9 @@
     </Compile>
     <Compile Include="src\Product Info\OrderHistory.cs" />
     <Compile Include="src\Product Info\OrderHistoryLine.cs" />
+    <Compile Include="src\Product Info\OrderPad.cs" />
     <Compile Include="src\Product Info\Product.cs" />
-    <Compile Include="src\Product Info\OrderPadLine.cs" />
+    <Compile Include="src\Product Info\OrderPadQuantities.cs" />
     <Compile Include="src\SQL\ProductLookup.cs" />
     <Compile Include="src\SQL\QueryConstructor.cs" />
     <Compile Include="src\GUI\ScreenDrawing.cs">
@@ -136,7 +137,7 @@
     <Compile Include="src\CV\ScreenProcessor.cs" />
     <Compile Include="src\SQL\SQLLookUp.cs" />
     <Compile Include="src\SQL\SQLOrderPadPIPs.cs" />
-    <Compile Include="src\SQL\SQLOrderPadLine.cs" />
+    <Compile Include="src\SQL\SQLOrderPadQuantities.cs" />
     <Compile Include="src\SQL\SQLOrderHistory.cs" />
     <Compile Include="src\SQL\SQLQueryer.cs" />
     <Compile Include="src\Defunct\QueryConstructorOld.cs" />
