Mostly implemented ordering comments just need to adjust drawing and make sure its visible / updating and test code

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -101,6 +101,9 @@
     <Compile Include="src\Email\NHSClient.cs" />
     <Compile Include="src\GUI\HotKey.cs" />
     <Compile Include="src\GUI\MultiFormContext.cs" />
+    <Compile Include="src\GUI\OrderingCommentsDrawing.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\GUI\NewETPBatch.cs">
       <SubType>Form</SubType>
     </Compile>
