--- a/PharmApp/PharmApp/packages.config
+++ b/PharmApp/PharmApp/packages.config
@@ -2,5 +2,9 @@
 <packages>
   <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net48" />
   <package id="ImapX" version="2.0.0.18" targetFramework="net48" />
+  <package id="MailKit" version="2.10.1" targetFramework="net48" />
+  <package id="MimeKit" version="2.10.1" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.8" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net48" />
 </packages>
