Added RMS related queries and adjusted GETREQUESTS. All needed data should be visible from this query, so just need a queryconstructor method that runs the three clean RMS queries then grabs all requests, populating all relevant data. Will then need to organise query to change status to requested.

--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -164,6 +164,7 @@
     <Compile Include="src\Product Info\OrderPad.cs" />
     <Compile Include="src\Product Info\Product.cs" />
     <Compile Include="src\Product Info\OrderPadQuantities.cs" />
+    <Compile Include="src\Requests\Patient.cs" />
     <Compile Include="src\Requests\Request.cs" />
     <Compile Include="src\Requests\RequestItem.cs" />
     <Compile Include="src\Requests\RequestManager.cs" />
