--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -117,6 +117,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalSettings.cs" />
     <Compile Include="src\CV\OCRResultListEventArgs.cs" />
     <Compile Include="src\Email\NHSClient.cs" />
     <Compile Include="src\GUI\EmailForm.cs">
@@ -133,6 +134,9 @@
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </Compile>
     <Compile Include="src\GUI\MultiFormContext.cs" />
+    <Compile Include="src\GUI\RequestsButtonDrawing.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\GUI\OrderingCommentsDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
